--- a/Lektion2/index.html
+++ b/Lektion2/index.html
@@ -8,6 +8,20 @@
     </head>
 
     <body>
+        <nav>
+            <hr />
+            <a href="https://github.com/Gaztly?tab=repositories"> Github Gaztly </a>
+            <a href="https://github.com/Gaztly?tab=repositories" target="_self"> Github Self window </a>
+            <hr />
+
+        </nav>
+        <h2>Span </h2>
+            <h3>Handelsakademin
+            </h3>
+
+                <span>SOS21</span>
+            GB
+        </h2>
         <h2>Descriptive list</h2>
         <dl>
             <dt>Definition</dt>
@@ -17,9 +31,7 @@
             <dd>Beskrivning</dd>
 
         </dl>
-        <hr />
-        <a href="https://github.com/Gaztly?tab=repositories"> Github Gaztly </a>
-        <a href="https://github.com/Gaztly?tab=repositories" target="_self"> Github Self window </a>
+ 
         <!--Overide base with target-->
 <hr />
 <h2>Form Demo</h2>
@@ -37,10 +49,29 @@
 
 <p>Radio Buttons:</p>
 <input type="radio" name="radio"/> Radio 1 <br />
-<input type="radio" name="radio" /> Radio 2
+<input type="radio" name="radio" /> Radio 2<br />
 <p>Color Picker: </p>
-<input type="color" name="color" />
-<p></p>
+<input type="color" name="color" /><br />
+<label for="Date">Date Picker:</label> <br />
+<input type="datetime-local" name="datetime" /> <br />
+<p>Dropdown:</p>
+<label for="cars">Select your car:</label> <br />
+<select name="cars">
+    <optgroup label="Svenska Bilar">
+        <option value="Volvo">Volvo</option>
+        <option value="Saab">Saab</option>
+    </optgroup>
+    <optgroup label ="Utländska Bilar">    
+        <option value="Ford">Ford</option>
+    </optgroup>
+</select>
+<input type="submit" value="Submit" />
+<input type="reset" value="Reset" />
+
 </form>
+<foot>
+    <hr />
+    <p>Thiiiiiis is the foooooter welcome to the foooooter.foot..Feet.FoT.fETS</p>
+</foot>
     </body>
     </html>
