--- a/Lektion2/index.html
+++ b/Lektion2/index.html
@@ -63,6 +63,7 @@
     </optgroup>
     <optgroup label ="Utländska Bilar">    
         <option value="Ford">Ford</option>
+        <option>Mustang</option>
     </optgroup>
 </select>
 <input type="submit" value="Submit" />
